# Tupa-Masters

./: README.md  client.app  client_app.py  pyproject.toml  server_app.py  strategy.py  task.py
scripts_tupa/: config.py  model_hybrid.py  perf_log.py  plot1_split.py  plot2_AB_decomp.py  plot2_decomposition.py  plot3_windowing.py  step1_split.py  step1_split_v2.py  step2_3_windows_wavelet.py  step2_3_windows_wavelet_v2.py  step4_5_labels.py  step4_5_labels_v2.py  step6_train.py  step8_test.py
scripts_tupa/EDA/: README_EDA.md  bubble_map.py  eda_real_energy_load_profiles.py  eda_synthetic_energy_load_profiles.py  metadata.csv  overlap_analysis.py
